# sale-analysis

./: .gitignore  README.md  analyzed_sessions.jsonl  api_template  package.json  scaling_plan.md  strategy.md  training_framework.md
apps/backend/: drizzle.config.ts  index.ts  package.json
apps/backend/drizzle/: 0000_bored_toxin.sql  0001_red_cammi.sql
apps/backend/src/: analytics-routes.ts  db.ts  metrics-calculator.ts  run-scrapper.ts  schema_operational.ts  schema_warehouse.ts  scraper.ts
apps/frontend/: package.json  vite.config.ts
apps/frontend/src/: App.vue
backend/: drizzle.config.ts  go.mod  package.json  tsconfig.json
backend/json/: mock_data.json
backend/json/analyzed/: sample_1_sessionized_analyzed.json  sample_1_sessionized_analyzed_0.json  sample_1_sessionized_analyzed_1.json  sample_1_sessionized_analyzed_2.json  upload_1768271731_sessionized_analyzed.json  upload_1768272516_sessionized_analyzed.json  upload_1768272733_sessionized_analyzed.json  upload_1768279145_sessionized_analyzed.json  upload_1768279997_sessionized_analyzed.json
backend/script/: session_analyzer.py  sessionizer.py
backend/sql/: chat.db  db.sql  schema.sql
backend/src/: analyzed_sessions.jsonl  index.ts  langextract_example.py  langextract_labeling.py  main.go  session_analyzer.py  sessionizer.py
frontend/: README.md  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.vue
llm-service/: README.md  main.py  pyproject.toml
sample_input/: sample_1.json
services/llm-engine/: analyzer.py  main.py  pyproject.toml
(+62 files in other folders)
