[project]
name = "llm-service"
version = "0.1.0"
description = "LLM analysis service for customer service QA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "google-cloud-aiplatform>=1.74.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
